overflow fixed on mobile

--- a/EveryPicture/style.css
+++ b/EveryPicture/style.css
@@ -216,6 +216,7 @@ footer{
 @media only screen and (min-width: 600px) {
     body{
         background-color: rgb(255, 248, 239);
+        overflow-x: hidden;
     }
     
     h1{
